# MonthChallengeAnswers

./: .gitignore  CMakeLists.txt  README.md
Challenge01/: CMakeLists.txt  main.cpp
Challenge01/daniel-adam remake/: Battleship Test 1Make.cpp  Battleship Test 1Make.h  FileFuncs.cpp  FileFuncs.h  Helper.cpp  UserInput.h
Challenge01/smallbeasts-remake/: CMakeLists.txt  Helper.h  UserInput.cpp
Challenge01/v1/: CMakeLists.txt  main.cpp
Challenge01/v2/: CMakeLists.txt  RowCol.cpp  RowCol.hpp  board.cpp  board.hpp  commandline.cpp  commandline.hpp  main.cpp  speadread.cpp  stringutil.hpp  terminal.hpp
Challenge02/: CMakeLists.txt
Challenge02/include/: collisions.hpp  commandline.hpp  createmode.hpp  error.hpp  fileloader.hpp  filewriter.hpp  game.hpp  parser.hpp  verifymode.hpp
Challenge02/src/: commandline.cpp  createmode.cpp  fileloader.cpp  filewriter.cpp  game.cpp  main.cpp  verifymode.cpp
Challenge03/: CMakeLists.txt
Challenge03/include/: ai.hpp  averageai.hpp  bestai.hpp  commandline.hpp  game.hpp  guessallai.hpp  programoptions.hpp  smartai.hpp  stupidai.hpp
Challenge03/src/: averageai.cpp  bestai.cpp  commandline.cpp  guessallai.cpp  main.cpp  stupidai.cpp
lib/: CMakeLists.txt
lib/include/: Array2D.hpp  RandomUtil.hpp  RowCol.hpp  baseconv.hpp  game.hpp  gameboard.hpp  gamelayout.hpp  ship.hpp  stringutil.hpp
lib/parser/: CMakeLists.txt  actions.hpp  attributes.hpp  charutil.hpp  concepts.hpp  dsl.hpp  empty.hpp  follows.hpp  int.hpp  joins.hpp  letters.hpp  matchers.hpp  parser.hpp  singlechar.hpp  whitespace.hpp
lib/src/: RowCol.cpp  ship.cpp
